# feng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  feng.sln  remember.txt
feng/: feng.vcxproj  feng.vcxproj.filters  scene1.fsp  thoughts.txt
feng/lib/: glad.c
feng/res/shaders/: debug_line.vs  depth.vs  fullscreen_quad.fs  light_bake.fs  light_bake.vs  object.fs  object.vs  object_batching.fs  object_batching.vs  penumbra_mask.fs  penumbra_mask.vs  skybox.fs  skybox.vs  text.fs  text.vs  transparent_object.vs  uiobject.fs  uiobject.vs
feng/src/: fng.h  main.cpp
feng/src/algorithms/: aabb.cpp  aabb.h  octree.cpp  octree.h
feng/src/editor/: lightbaker.cpp  lightbaker.h
feng/src/graphics/: cubemap.cpp  cubemap.h  gaussian_blur.h  mesh.cpp  mesh.h  mesh2d.cpp  model.cpp  model.h  model2d.cpp  model2d_renderer.cpp  model2d_renderer.h  primitives.cpp  primitives.h  primitives2d.cpp  primitives2d.h  shader.cpp  shader.h  skybox.cpp  skybox.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h  uimodel.cpp  uimodel.h  vertexarray.cpp  vertexarray.h  window.cpp  window.h
feng/src/io/: camera.cpp  camera.h  input.cpp  input.h
feng/src/logging/: logging.cpp  logging.h
feng/src/logic/: aabb.cpp  aabb.h  event.hpp  func_link.hpp
feng/src/physics/: collider.cpp  collider.h  collision_data.cpp  collision_data.h  epa.cpp  epa.h  gjk.cpp  physics.cpp  physics.h  shapes.h
feng/src/utilities/: fps_counter.h  singleton.hpp  utilities.cpp  utilities.h  uuid.hpp
linking/include/glad/: glad.h
res/models/brickwall/: brickwall.gltf
res/shaders/: debug_line.fs  debug_line.vert  debug_line.vs  debug_line_instanced.vert  debug_line_instanced.vs  gaussian.frag  gaussian.fs  light_bake.frag  light_bake.fs  light_bake.vert  main_framebuffer.frag  main_framebuffer.fs  object_batching.frag  object_batching.fs  object_batching.vert  object_batching.vs  penumbra_mask.frag  penumbra_mask.fs  penumbra_mask.vert  skybox.frag  skybox.fs  skybox.vert  text.frag  text.fs  text.vert  uiobject.frag  uiobject.vert
res/shaders/depth/: dirlight_depth.vs  pointlight_depth.frag  pointlight_depth.fs
src/: fng.h  main.cpp
src/algorithms/: aabb.h  binary_tree.hpp  octree.cpp  octree.h
src/graphics/: cubemap.cpp  cubemap.h  gaussian_blur.cpp  mesh.cpp  mesh2d.cpp  mesh2d.h  model.cpp  model2d.h  model2d_renderer.cpp  model2d_renderer.h  primitives.h  primitives2d.cpp  primitives2d.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  window.cpp  window.h
src/io/: input.cpp
src/logging/: logging.cpp  logging.h
src/logic/: event.hpp
src/physics/: physics.cpp
src/utilities/: files_in_folder.hpp  singleton.hpp  utilities.h  uuid.hpp
utils/: config.py  files_renamer.py  gaussian.py  generate_component.py  util_log.txt  vogel_disk.py
utils/templates/: component_cpp.txt  component_h.txt
(+146 files in other folders)
